# bullet_stream

./: CHANGELOG.md  Cargo.toml  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
examples/: style_guide.rs
src/: background_printer.rs  global.rs  lib.rs  style.rs  util.rs  write.rs
src/docs/: global_done_one.rs  global_done_two.rs  global_setup.rs  stateful_error.md  stateful_important.md  stateful_warning.md
