[package]
name = "bullet_stream"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Bulletproof printing for bullet point text"
keywords = ["script", "buildpack", "output", "printing", "ansi"]
repository = "https://github.com/schneems/bullet_stream"
documentation = "https://docs.rs/bullet_stream"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
fun_run = { version = ">=0.5,<1", optional = true }

[dev-dependencies]
indoc = "2.0.5"
tempfile = "3.13.0"
libcnb-test = "0.23.0"
ascii_table = { version = "4.0.4", features = ["color_codes"] }
pretty_assertions = "1.4"

[features]
# Allow stateless printing
global_functions = []

# Enable global_functions by default
default = ["global_functions", "fun_run"]
